# citrus

./: .gitignore  FUNDING.yml  LICENSE  README.md  cloud.py  main.py  pyproject.toml  requirements.txt  setup.py
citrusdb/: __init__.py
citrusdb/api/: console.py  index.py  local.py
citrusdb/db/: __init__.py
citrusdb/db/index/: hnswlib.py
citrusdb/db/postgres/: db.py  queries.py  query_builder.py
citrusdb/db/sqlite/: db.py  queries.py  query_builder.py
citrusdb/embedding/: openai.py  utils.py
citrusdb/test/: recall.py
citrusdb/utils/: types.py  utils.py
demo/: demo.py
demo/db/: .citrus_params  citrus  pokemon
