[project]
name = "citrusdb"
version = "0.1.3"

authors = [
  { name="Debabrata Mondal", email="debabrata.js@protonmail.com" },
]
description = "citrus."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = [
  'hnswlib >= 0.7',
  'numpy >= 1.21.6',
  'openai >= 0.27',
]

[project.urls]
"Homepage" = "https://github.com/0xDebabrata/citrus"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
