[project]
name = "citrusdb"
version = "0.6.9"

authors = [
  { name="Debabrata Mondal", email="debabrata.js@protonmail.com" },
]
description = "open-source vector database. store and retrieve embeddings for your next ai project!"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = [
  'hnswlib >= 0.7',
  'numpy >= 1.21.6',
  'openai >= 0.27',
  'psycopg[c] >= 3.1.9',
  'psycopg[pool] >= 3.1.7'
]

[project.urls]
"Homepage" = "https://github.com/0xDebabrata/citrus"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
